<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_batman"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/superhero1" />

    <item
        android:id="@+id/navigation_flash"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/superhero2" />

    <item
        android:id="@+id/navigation_superman"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/superhero3" />

    <item
        android:id="@+id/navigation_wonderwoman"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/superhero4" />
    </group>
</menu>